[gd_scene load_steps=12 format=3 uid="uid://cc64vt0n8xfpo"]

[ext_resource type="Script" path="res://Scripts/enemy2.gd" id="1_1lh5b"]
[ext_resource type="Texture2D" uid="uid://csdf3oeqfnxtf" path="res://Addons/Free/Main Characters/Inimigo Abobora/abobora_pulando.png" id="3_l438a"]
[ext_resource type="Texture2D" uid="uid://q67e3oih6iir" path="res://Addons/Free/Main Characters/Inimigo Abobora/abobora_hit.png" id="4_x5hr6"]
[ext_resource type="PackedScene" uid="uid://cv0a0xin45ckl" path="res://Scenes/hit_box.tscn" id="6_f85c7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ow6fw"]
size = Vector2(21, 21)

[sub_resource type="Animation" id="Animation_of1qw"]
resource_name = "Andar"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_l438a")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("anim:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ky4xq"]
resource_name = "Dano"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_x5hr6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("anim:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_hwnsx"]
resource_name = "Levantando"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_l438a")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("anim:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_uhgr1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_l438a")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("anim:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d035m"]
_data = {
"Andar": SubResource("Animation_of1qw"),
"Dano": SubResource("Animation_ky4xq"),
"Levantando": SubResource("Animation_hwnsx"),
"RESET": SubResource("Animation_uhgr1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6de8k"]
size = Vector2(21, 2)

[node name="Enemy" type="CharacterBody2D" groups=["inimigos"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_1lh5b")

[node name="anim" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("3_l438a")
flip_h = true
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -13.5)
shape = SubResource("RectangleShape2D_ow6fw")

[node name="animação" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d035m")
}
autoplay = "Andar"
speed_scale = 0.8

[node name="Detector_parede" type="RayCast2D" parent="."]
position = Vector2(0, -15)
target_position = Vector2(-15, 0)
collision_mask = 6

[node name="HitBox" parent="." instance=ExtResource("6_f85c7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-0.5, -25)
shape = SubResource("RectangleShape2D_6de8k")

[node name="spawn_coletavel" type="Marker2D" parent="."]
position = Vector2(0, -28)

[connection signal="animation_finished" from="animação" to="." method="_on_animação_animation_finished"]
